app/nexus/traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-server
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-middleware
spec:
  rules:
  - host: nexus.suriya.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-repository-manager
            port:
              number: 8081
